--- a/css/style.css
+++ b/css/style.css
@@ -292,14 +292,24 @@ p {
     left: unset;
   }
 }
-.mylink{
+.mylink {
   color: #f9eb06;
   text-decoration: none;
+  font-size: 1.3rem;
 }
-.copyright{
+.copyright {
   z-index: 4000;
   text-align: left;
   margin-left: 2px;
   position: relative;
   bottom: 3rem;
 }
+@media screen and (max-width: 700px) {
+  .copyright {
+    bottom: 3rem;
+  }
+  .mylink {
+    font-size: 0.8rem;
+  }
+}
+
